--- a/src/app/components/email.list/email-list.component.css
+++ b/src/app/components/email.list/email-list.component.css
@@ -3,9 +3,10 @@
   margin: auto;
 }
 
-button {
-  width: 48%;
-  margin-bottom: 1rem;
+h1 {
+  width: 100%;
+  text-align: center;
+  margin: 2rem auto 2rem auto;
   border-radius: 10px;
 }
 
@@ -14,13 +15,21 @@ button {
   justify-content: space-between;
 }
 
-h1 {
-  width: 100%;
-  text-align: center;
-  margin: 2rem auto 2rem auto;
+button {
+  width: 48%;
+  margin-bottom: 1rem;
   border-radius: 10px;
+}
+
+mat-form-field {
+  width: 100%;
 }
 
 table {
   border-radius: 10px;
+}
+
+caption {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
