--- a/src/app/components/email.list/email-list.component.css
+++ b/src/app/components/email.list/email-list.component.css
@@ -3,7 +3,7 @@
   margin: auto;
 }
 
-h1 {
+.pageTitle {
   width: 100%;
   text-align: center;
   margin: 2rem auto 2rem auto;
@@ -15,13 +15,13 @@ h1 {
   justify-content: space-between;
 }
 
-button {
+.upBtn, .dwnBtn {
   width: 48%;
   margin-bottom: 1rem;
   border-radius: 10px;
 }
 
-mat-form-field {
+.filter {
   width: 100%;
 }
 
@@ -33,3 +33,18 @@ caption {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.card {
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+mat-card-title, mat-card-header {
+  padding-bottom: .5rem;
+}
+
+mat-card-content {
+  padding-top: .5rem;
+}
+
