--- a/src/app/components/email.list/email-list.component.html
+++ b/src/app/components/email.list/email-list.component.html
@@ -62,3 +62,17 @@
   </div>
 
 </div>
+
+<modal #showEmailModal>
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title>{{ email?.subject }}</mat-card-title>
+      <mat-card-subtitle>De: {{ email?.sendFrom }}</mat-card-subtitle>
+      <mat-card-subtitle>Para: {{ email?.sendTo }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-divider></mat-divider>
+    <mat-card-content>
+      <p>{{ email?.text }}</p>
+    </mat-card-content>
+  </mat-card>
+</modal>
