--- a/src/app/components/email.list/email-list.component.css
+++ b/src/app/components/email.list/email-list.component.css
@@ -21,10 +21,6 @@
   border-radius: 10px;
 }
 
-.filter {
-  width: 100%;
-}
-
 table {
   border-radius: 10px;
 }
@@ -46,5 +42,31 @@ mat-card-title, mat-card-header {
 
 mat-card-content {
   padding-top: .5rem;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.modal form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.message {
+  resize: none; /* Prevent textarea resizing */
+  min-height: 100px; /* Set minimum height for message field */
+}
+
+.file-upload {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+#uploadFile {
+  padding: 1rem;
 }
 
