--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,8 +1,9 @@
 .modal {
   background: #fff;
-  border-radius: 8px;
   box-shadow: 0 2px 8px #333;
-  min-width: 320px;
+  border-radius: 8px;
+  min-width: 50vw;
+  max-height: 70vh;
   position: fixed;
   left: 50%;
   top: 50%;
@@ -12,11 +13,11 @@
 
 .overlay {
   background: #000;
-  height: 100vh;
-  left: 0;
   opacity: 0.5;
-  position: fixed;
-  top: 0;
+  height: 100vh;
   width: 100vw;
+  position: fixed;
+  left: 0;
+  top: 0;
   z-index: 10;
 }
