--- a/src/app/components/email.list/email-list.component.css
+++ b/src/app/components/email.list/email-list.component.css
@@ -1,13 +1,30 @@
+.full-width {
+  width: 100%;
+}
+
 .container {
+  padding: 1rem;
+  min-height: 100vh;
+  height: fit-content;
+  background-color: #333333;
+}
+
+.content {
   width: 90%;
   margin: auto;
 }
 
 .pageTitle {
-  width: 100%;
-  text-align: center;
-  margin: 2rem auto 2rem auto;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto 2rem auto;
   border-radius: 10px;
+  text-align: center;
+  color: #9c27b0;
+}
+
+.title {
+  margin: auto;
 }
 
 .file-buttons {
@@ -19,19 +36,14 @@
   width: 48%;
   margin-bottom: 1rem;
   border-radius: 10px;
+  background-color: #9c27b0;
+  color: white;
 }
 
 table {
+  max-width: 100%;
   border-radius: 10px;
-}
-
-th.mat-sort-header-sorted {
-  color: black;
-}
-
-caption {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  overflow-x: scroll;
 }
 
 .card {
@@ -46,10 +58,13 @@ mat-card-title, mat-card-header {
 
 mat-card-content {
   padding-top: .5rem;
+  min-height: 10vh;
+  max-height: 40vh;
+  overflow-y: scroll;
 }
 
-.full-width {
-  width: 100%;
+.line-break {
+  white-space: pre-wrap;
 }
 
 .modal form {
@@ -59,8 +74,8 @@ mat-card-content {
 }
 
 .message {
-  resize: none; /* Prevent textarea resizing */
-  min-height: 100px; /* Set minimum height for message field */
+  resize: none;
+  min-height: 100px;
 }
 
 .file-upload {
