--- a/src/app/components/email.list/email-list.component.html
+++ b/src/app/components/email.list/email-list.component.html
@@ -1,81 +1,94 @@
 <div class="container">
+  <div class="content">
 
-  <h1 class="mat-elevation-z8 pageTitle">Lista de e-mails enviados</h1>
+    <div class="pageTitle full-width mat-elevation-z8">
+      <button
+        class="homeBtn"
+        mat-icon-button color="accent"
+        aria-label="Voltar"
+        routerLink="../"
+        matTooltip="Voltar para página inicial">
+        <mat-icon>home</mat-icon>
+      </button>
+      <h1 class="title">
+        Lista de e-mails enviados
+      </h1>
+    </div>
 
-  <div class="file-buttons">
-    <button
-      class="mat-elevation-z8 upBtn"
-      color="primary"
-      mat-stroked-button
-      (click)="uploadFile.toggle()">
-      Carregar planilha de e-mails
-    </button>
-    <button
-      class="mat-elevation-z8 dwnBtn"
-      color="primary"
-      mat-stroked-button
-      (click)="onDownloadFile()">
-      Baixar planilha de e-mails
-    </button>
+    <div class="file-buttons">
+      <button
+        class="mat-elevation-z8 upBtn"
+        mat-stroked-button
+        (click)="uploadFile.toggle()"
+        matTooltip="Carregar planilha com e-mails a serem enviados">
+        Carregar planilha de e-mails
+      </button>
+      <button
+        class="mat-elevation-z8 dwnBtn"
+        mat-stroked-button
+        (click)="onDownloadFile()"
+        matTooltip="Baixar relatório com os e-mails, apenas filtrados">
+        Baixar relatório de e-mails
+      </button>
+    </div>
+
+    <mat-form-field class="mat-elevation-z4 full-width">
+      <mat-label>Filtrar</mat-label>
+      <input (keyup)="applyFilter($event)" matInput
+             placeholder="Ex.: Fulano de tal, Enviado, Notas de Matemática, 04/12/2023">
+    </mat-form-field>
+
+    <div class="mat-elevation-z8 ">
+
+      <table class="mat-elevation-z4" mat-table [dataSource]="dataSource" matSort>
+
+        <ng-container matColumnDef="id">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header> ID</th>
+          <td *matCellDef="let element" mat-cell> {{ element.id }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="sendTo">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header> Destinatário</th>
+          <td *matCellDef="let element" mat-cell> {{ element.sendTo }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header> Status</th>
+          <td *matCellDef="let element" mat-cell> {{ element.status }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="subject">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header> Assunto</th>
+          <td *matCellDef="let element" mat-cell> {{ element.subject }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="sendDate">
+          <th *matHeaderCellDef mat-header-cell mat-sort-header> Data de envio</th>
+          <td *matCellDef="let element" mat-cell> {{ element.sendDate }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="conteudo">
+          <th *matHeaderCellDef mat-header-cell> Conteúdo</th>
+          <td *matCellDef="let element" mat-cell>
+            <button mat-icon-button color="accent" aria-label="Abrir e-mail"
+                    (click)="showEmailModal.toggle(); setEmail(element)">
+              <mat-icon>open_in_new</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+        <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                     showFirstLastButtons
+                     aria-label="Select page of periodic elements">
+      </mat-paginator>
+
+    </div>
+
   </div>
-
-  <mat-form-field class="full-width">
-    <mat-label>Filtrar</mat-label>
-    <input (keyup)="applyFilter($event)" matInput
-           placeholder="Ex.: Fulano de tal, Enviado, Notas de Matemática, 04/12/2023">
-  </mat-form-field>
-
-  <div class="mat-elevation-z8 ">
-
-    <table class="mat-elevation-z4" mat-table [dataSource]="dataSource"  matSort >
-      <caption>E-mails carregados através da planilha</caption>
-
-      <ng-container matColumnDef="id">
-        <th *matHeaderCellDef mat-header-cell mat-sort-header > ID</th>
-        <td *matCellDef="let element" mat-cell> {{ element.id }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="sendTo">
-        <th *matHeaderCellDef mat-header-cell mat-sort-header > Destinatário</th>
-        <td *matCellDef="let element" mat-cell> {{ element.sendTo }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th *matHeaderCellDef mat-header-cell mat-sort-header > Status</th>
-        <td *matCellDef="let element" mat-cell> {{ element.status }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="subject">
-        <th *matHeaderCellDef mat-header-cell mat-sort-header > Assunto</th>
-        <td *matCellDef="let element" mat-cell> {{ element.subject }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="sendDate">
-        <th *matHeaderCellDef mat-header-cell mat-sort-header > Data de envio</th>
-        <td *matCellDef="let element" mat-cell> {{ element.sendDate }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="conteudo">
-        <th *matHeaderCellDef mat-header-cell > Conteúdo</th>
-        <td *matCellDef="let element" mat-cell>
-          <button mat-icon-button color="accent" aria-label="Abrir e-mail"
-                  (click)="showEmailModal.toggle(); setEmail(element)">
-            <mat-icon>open_in_new</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
-      <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
-
-  </div>
-
 </div>
 
 <modal #showEmailModal>
@@ -87,7 +100,9 @@
     </mat-card-header>
     <mat-divider></mat-divider>
     <mat-card-content>
-      <p>{{ email?.text }}</p>
+      <p [ngClass]="{'line-break': showLineBreak}">
+        {{ email?.text }}
+      </p>
     </mat-card-content>
   </mat-card>
 </modal>
