--- a/src/app/components/email.list/email-list.component.css
+++ b/src/app/components/email.list/email-list.component.css
@@ -14,7 +14,7 @@
   margin: auto;
 }
 
-.pageTitle {
+.page-title {
   display: flex;
   justify-content: space-between;
   margin: 0 auto 2rem auto;
@@ -25,6 +25,8 @@
 
 .title {
   margin: auto;
+  font-weight: bolder;
+  font-family: "Cooper Black", sans-serif;
 }
 
 .file-buttons {
@@ -32,7 +34,7 @@
   justify-content: space-between;
 }
 
-.upBtn, .dwnBtn {
+.up-btn, .dwn-btn {
   width: 48%;
   margin-bottom: 1rem;
   border-radius: 10px;
@@ -67,10 +69,13 @@ mat-card-content {
   white-space: pre-wrap;
 }
 
-.modal form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+.upload-emails {
+  color: white;
+}
+
+.send-emails {
+  margin: 1rem;
+  justify-content: center;
 }
 
 .message {
@@ -80,12 +85,13 @@ mat-card-content {
 
 .file-upload {
   display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-top: 10px;
+  justify-content: space-around;
 }
 
-#uploadFile {
-  padding: 1rem;
+.file-name {
+  vertical-align: center;
 }
 
+mat-progress-bar {
+  margin-top: 1rem;
+}
