--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -37,3 +37,13 @@
 button {
   width: 30%
 }
+
+.download-template {
+  margin: 1rem;
+  color: white;
+}
+
+.explain {
+  text-align: justify;
+  margin-bottom: 1rem;
+}
