--- a/src/app/components/email.list/email-list.component.css
+++ b/src/app/components/email.list/email-list.component.css
@@ -25,8 +25,8 @@
 
 .title {
   margin: auto;
-  font-weight: bolder;
-  font-family: "Cooper Black", sans-serif;
+  font-weight: bold;
+  font-family: Roboto, sans-serif;
 }
 
 .file-buttons {
