Ajustar nome do projeto

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,12 +2,14 @@
   <p>© 2024 Ariel Gustavo</p>
   <a
     href="https://github.com/arielgpaz"
-    matTooltip="Acessar GitHub">
+    matTooltip="Acessar GitHub"
+    target="_blank">
     <img class="github" src="/assets/img/github.svg">
   </a>
   <a
     href="https://www.linkedin.com/in/arielgustavo/"
-    matTooltip="Acessar LinkedIn">
+    matTooltip="Acessar LinkedIn"
+    target="_blank">
     <img class="linkedin" src="/assets/img/linkedin.svg">
   </a>
 </div>
